--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Assignment 1: Smoothing"
 author: "Johan Larsson, Niels Richard Hansen"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
+date: "`r format(Sys.time(), '%-d %B, %Y')`"
 output: 
   html_document:
     highlight: pygments
