--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -25,7 +25,7 @@ five points are not independent. Alternative solutions may provide ways of testi
 Restructuring of code may improve or hurt performance. Optimization of performance may 
 improve or hurt readability. And so on. 
 
-# Assignment 1A: Density estimation
+# A: Density Estimation
 
 Implement a kernel density estimator using the Epanechnikov kernel, 
 $$K(x) = \frac{3}{4}(1 - x^2) 1_{[-1, 1]}(x),$$
@@ -37,7 +37,7 @@ It may be a good idea to use real data to investigate how the bandwidth selectio
 works, but for benchmarking and profiling it is best to use simulated data. 
 Think about how to make your implementation as general and generic as possible.
 
-# Assignment 1B: Bivariate smoothing
+# B: Bivariate Smoothing
 
 Implement a smoothing spline smoother using LOOCV for selecting the tuning 
 parameter $\lambda$. Test the implementation and compare the results with the 
