fix: fix some errors in introduction slides and move out oop

--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -162,7 +162,7 @@ lines(
 ### Efficiency
 
 - Profiling
-- Optimzing
+- Optimizing
 - Benchmarking
 
 ---
@@ -213,13 +213,12 @@ knitr::include_graphics(file.path("images/jinyang.jpg"))
 ### Presentations
 
 - Present solution to one of the assignments.
-- On weeks 3, 4, 5, and 6 (Thursday afternoon sessions).
+- On weeks 3, 4, 6, and 7 (Thursday afternoon sessions).
 - Groups of 2-3 students
 - Presentation, discussion, and feedback
 - [Register in Absalon](https://absalon.ku.dk/courses/76985/groups#tab-25490) (limited slots assignment)
 - Compulsory but not graded
 - Work-in-progress solutions are fine
-]
 
 --
 
@@ -244,7 +243,7 @@ knitr::include_graphics(file.path("images/jinyang.jpg"))
 ### Presentations
 
 - Thursdays, 13:15–15:00 (Johan)
-- Only weeks 3, 4, 5, and 6
+- Only weeks 3, 4, 6, and 7
 ]
 
 --
@@ -433,7 +432,7 @@ environment(f)
 ```
 ]
 
---- 
+---
 
 ## Naming Functions
 
@@ -858,287 +857,6 @@ mutate(kern_benchmarks, expression = as.character(expression)) |>
   facet_grid(cols = vars(n))
 ```
 
----
-
-class: middle, center
-
-# Object-Oriented Programming in R
-
----
-
-## Many Systems
-
-### In Base R
-
-- S3
-- S4
-- Reference Classes
-
---
-
-### Through Packages
-
-- [R6](https://cran.r-project.org/package=R6)
-- [S7](https://cran.r-project.org/package=S7)
-
-### This Course
-
-We will focus **entirely** on S3.
-
----
-
-## Example: Integration
-
-The function `integrate()` takes a function as argument and returns the 
-value of numerically integrating the function.
---
-
-
-It is an example of a *functional*. 
---
-
-
-```{r}
-integral <- integrate(sin, 0, 1)
-integral
-```
-
-The numerical value of the integral 
-$$\int_0^1 \sin(x) \mathrm{d}x$$ 
-is printed nicely above—including an indication of the numerical error. 
-
----
-## Return Values
-
-In fact, `integrate()` returns a list with a *class label*.
-
-```{r}
-str(integral)
-```
---
-
-Return values that don't fit into one of the basic data structures 
-can be returned as a list as above.
-
----
-## The Return Value of `integrate()`
-
-The class label can be extracted directly.
-
-```{r}
-class(integral)
-```
---
-
-- The printed result of `integrate()` is not the same as the object itself. 
-- What you see is the result of the **method** `print.integrate()`.
-
----
-## Printing Objects of Class Integrate 
-
-```{r}
-stats:::print.integrate
-```
-
-(The `print.integrate()` function is not exported from the stats package. It is in the 
-namespace of the stats package, and to access it directly we use `stats:::`.)
-
----
-## Histogram Objects
-
-```{r temp-hist, fig.width = 9, fig.height = 6}
-phi_hist <- hist(phipsi$phi, main = NULL)
-```
-
----
-## Histogram Objects
-
-```{r}
-class(phi_hist)
-```
-
---
-
-```{r}
-str(phi_hist)
-```
-
----
-## Histogram Objects
-
-```{r}
-phi_hist[1:4]
-```
-
-
----
-## Getting Help for Objects
-
-You can find documentation for `plot()` using e.g. 
-
-```{r help-plot, eval = FALSE}
-?plot
-```
-
---
-However, this will be uninformative on how an object of class histogram is plotted. 
-Try instead 
-
-```{r help-plot-histogram, eval = FALSE}
-?plot.histogram
-```
-
-This will give the documentation for the plot method for objects of class histogram. 
-
-
----
-## S3 Overview
-
-* S3 classes are standard data structures (typically lists) with *class labels*.
---
-
-* It is an informal system. No checks of object content.
---
-
-* One implements a *generic* function via `UseMethod()`. E.g.
-```{r, eval=FALSE}
-plot
-```
-
-```{r, echo=FALSE}
-cat(deparse(plot))
-```
-
---
-
-* **Methods** for specific classes are implemented as standard R functions 
-with the naming convention `f.classname()` for a method for class `classname` of the function `f()`. 
---
-
-* The system is widely used to write methods for the generic functions `print()`, 
-`plot()` and `summary()`. 
-
-
----
-## Constructing a New Class
-
-```{r, echo=FALSE}
-count_zeros_vec <- function(x) {
-  sum(x == 0)
-}
-```
-
-Recall the function `count_zeros_vec()` that counts the number of zeros in a vector.
---
-
-
-If we need this number many times it is beneficial to compute it once and then 
-extract it whenever needed. 
-
---
-
-We first write a *constructor function* that returns a list with a class
-label.
-
-```{r}
-count_object <- function(x) {
-  structure(
-    list(
-      x = x,
-      n = count_zeros_vec(x)
-    ),
-    class = "count_object"
-  )
-}
-```
-
----
-## A Data Example
-
-```{r}
-set.seed(1234)
-
-count_data <- count_object(rpois(10, 2))
-count_data
-```
-
----
-## The Generic Function
-
-To activate looking up a method for a specific class, one needs to tell R 
-that the function `count_zeros()` is a *generic function*. 
-
-```{r}
-count_zeros <- function(x) {
-  UseMethod("count_zeros")
-}
-```
---
-
-We can let the default method be the vectorized version.
-```{r}
-count_zeros.default <- function(x) {
-  count_zeros_vec(x)
-}
-```
-
---
-
-Then we can implement a class-specific version for the class `count_object`.
-
-```{r}
-count_zeros.count_object <- function(x) {
-  x[["n"]]
-}
-```
-
----
-
-## A Print Method
-
-And we can also implement a print method.
-
-```{r}
-print.count_object <- function(x) {
-  cat("Values:", x$x, "\nNumber of zeros:", x$n, "\n")
-}
-```
-
-
-```{r}
-count_data # Invokes print.count_object()
-```
-
-```{r}
-count_zeros(count_data) # Invokes count_zeros.count_object()
-```
-
----
-
-## Exercise
-
-### Step 1
-
-Create a constructor function called `summarize_vector()` that 
-that takes a numeric vector as input and returns an object of class `vector_summary` containing
-the mean, median, and standard deviation of the input vector.
-
-```{r include = FALSE}
-summarize_vector <- function(x) {
-  structure(
-    list(
-      mean = mean(x),
-      median = median(x),
-      sd = sd(x)
-    ),
-    class = "vector_summary"
-  )
-}
-```
-
-### Step 2
-
-Write a `print()` method for the class `vector_summary` that prints the mean, median, and standard deviation in a neatly formatted way.
 
 ---
 
