--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Assignment 1: Smoothing"
+title: "Assignment Topic 1: Smoothing"
 author: "Johan Larsson, Niels Richard Hansen"
 date: "`r format(Sys.time(), '%-d %B, %Y')`"
 output:
